// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applyTheme > with baseThemeId > attaches one style node containing overrides with the correct theme selector 1`] = `
".secondary-theme.secondary-theme:not(#\\9){
	--black-css:purple;
	--grey-css:grey;
	--brown-css:black;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark.secondary-theme:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.secondary-theme.secondary-theme .navigation:not(#\\9),.navigation.navigation.secondary-theme:not(#\\9){
	--shadow-css:pink;
}
@media not print {.dark.dark.secondary-theme .navigation:not(#\\9),.dark.dark.navigation.secondary-theme:not(#\\9){
	--shadow-css:var(--grey-css);
	--buttonShadow-css:green;
}}"
`;

exports[`applyTheme > with secondary theme > attaches one style node containing override 1`] = `
"body:not(#\\9){
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9),.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;

exports[`applyTheme > with targetDocument > attaches one style node containing override on the target document 1`] = `
"body:not(#\\9){
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9),.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;

exports[`applyTheme > without secondary theme > attaches one style node containing override 1`] = `
"body:not(#\\9){
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9),.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;

exports[`generateThemeStylesheet > with baseThemeId > creates override styles 1`] = `
".secondary-theme.secondary-theme:not(#\\9){
	--black-css:purple;
	--grey-css:grey;
	--brown-css:black;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark.secondary-theme:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.secondary-theme.secondary-theme .navigation:not(#\\9),.navigation.navigation.secondary-theme:not(#\\9){
	--shadow-css:pink;
}
@media not print {.dark.dark.secondary-theme .navigation:not(#\\9),.dark.dark.navigation.secondary-theme:not(#\\9){
	--shadow-css:var(--grey-css);
	--buttonShadow-css:green;
}}"
`;

exports[`generateThemeStylesheet > with reference tokens > creates override styles with CSS variables 1`] = `
"body:not(#\\9){
	--colorPrimary600-css:#ff6600;
	--colorPrimary700-css:#692dc9;
}"
`;

exports[`generateThemeStylesheet > with secondary theme > creates override styles 1`] = `
"body:not(#\\9){
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9),.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;

exports[`generateThemeStylesheet > without override > creates full theme styles 1`] = `
"body{
	--fontFamilyBase-css:"Helvetica Neue", Arial, sans-serif;
	--fontFamilyBody-css:"Helvetica Neue", Arial, sans-serif;
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:grey;
	--buttonShadow-css:grey;
	--boxShadow-css:grey;
	--lineShadow-css:grey;
	--small-css:1px;
	--medium-css:3px;
	--scaledSize-css:3px;
	--appear-css:20ms;
	--containerShadowBase-css:2px 3px orange, -1px 0 8px olive;
	--modalShadowContainer-css:2px 3px orange, -1px 0 8px olive;
}
.compact:not(#\\9){
	--scaledSize-css:1px;
}
@media not print {.dark:not(#\\9){
	--shadow-css:black;
	--buttonShadow-css:black;
	--boxShadow-css:brown;
	--lineShadow-css:brown;
}}
.disabled-motion:not(#\\9){
	--appear-css:0;
}
.navigation:not(#\\9){
	--shadow-css:black;
	--buttonShadow-css:black;
	--boxShadow-css:purple;
	--lineShadow-css:black;
}
@media not print {.dark .navigation:not(#\\9),.dark.navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:brown;
	--lineShadow-css:purple;
}}"
`;

exports[`generateThemeStylesheet > without override > creates full theme styles with secondary theme 1`] = `
".secondary-theme:not(#\\9){
	--fontFamilyBase-css:"Helvetica Neue", Arial, sans-serif;
	--fontFamilyBody-css:"Helvetica Neue", Arial, sans-serif;
	--black-css:purple;
	--grey-css:grey;
	--brown-css:black;
	--shadow-css:grey;
	--buttonShadow-css:grey;
	--boxShadow-css:grey;
	--lineShadow-css:grey;
	--small-css:1px;
	--medium-css:3px;
	--scaledSize-css:3px;
	--appear-css:20ms;
	--containerShadowBase-css:2px 3px orange, -1px 0 8px olive;
	--modalShadowContainer-css:2px 3px orange, -1px 0 8px olive;
}
.compact.secondary-theme:not(#\\9){
	--scaledSize-css:1px;
}
@media not print {.dark.secondary-theme:not(#\\9){
	--shadow-css:purple;
	--buttonShadow-css:purple;
	--boxShadow-css:black;
	--lineShadow-css:black;
}}
.disabled-motion.secondary-theme:not(#\\9){
	--appear-css:0;
}
.secondary-theme .navigation:not(#\\9),.navigation.secondary-theme:not(#\\9){
	--shadow-css:purple;
	--buttonShadow-css:purple;
	--boxShadow-css:purple;
	--lineShadow-css:purple;
}
@media not print {.dark.secondary-theme .navigation:not(#\\9),.dark.navigation.secondary-theme:not(#\\9){
	--shadow-css:grey;
	--buttonShadow-css:grey;
	--boxShadow-css:black;
	--lineShadow-css:black;
}}"
`;

exports[`generateThemeStylesheet > without secondary theme > creates override styles 1`] = `
"body:not(#\\9){
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9),.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;
